# Finance-ML-model

./: .gitignore  .pre-commit-change.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  main.py  model_output.py  pyproject.toml  requirement.txt  requirements.txt  sample_data.py  ws_config.json
.github/workflows/: AzureML-CD.yml  CD.yml  CI.yml
data/: AR-dataset.csv
data/processed/: X_test_features.csv  X_train_features.csv
data/testing/: sample_data.json
docker/: mlapp_api.py  requirements.txt
scripts/: build_model.py  deploy_model.py  register_model.py  score.py
scripts/ar_model/: build_model.py  deploy_model.py  register_model.py  score.py
src/ar_classification/: data_load_and_process.py  generate_feature.py  model_build_and_evaluate.py  split_data.py
tests/: test_build_model.py  test_model.py  test_score_model.py
