[project]
name = "finance-ml-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = ["cfgv==3.4.0",
                "distlib==0.3.9",
                "filelock==3.17.0",
                "identify==2.6.6",
                "joblib==1.4.2",
                "nodeenv==1.9.1",
                "numpy==2.2.2",
                "pandas==2.2.3",
                "platformdirs==4.3.6",
                "pre-commit==4.1.0",
                "python-dateutil==2.9.0.post0",
                "pytz==2024.2",
                "pyyaml==6.0.2",
                "scikit-learn==1.6.1",
                "scipy==1.15.1",
                "six==1.17.0",
                "threadpoolctl==3.5.0",
                "tzdata==2025.1",
                "virtualenv==20.29.1"]

[project.optional-dependencies]
dev = ["ipykernel>=6.29.5, <7",
       "pip>=24.2"]

[build-system]
requires = [
  "setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["src"]
include = ["ar_classification*"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
