[project]
name = "ar-classification"
version = "0.1.0"
description = "Finance Classification Model"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = ["cloudpickle==3.1.1",
                "joblib==1.4.2",
                "matplotlib==3.10.0",
                "matplotlib-inline==0.1.7",
                "numpy==2.2.2",
                "pandas==2.2.3",
                "mlflow==2.20.1",
                "pre-commit==4.1.0",
                "scikit-learn==1.6.1",
                "scipy==1.15.1",
                "pydantic==2.9.2",
                "azureml-core==1.59.0",
                "virtualenv==20.29.1"]

[project.optional-dependencies]
dev = ["ipykernel>=6.29.5, <7",
       "pip>=24.2"]

[build-system]
requires = [
  "setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "scripts"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
